<resources>
    <string name="app_name">TCC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="atendimentos_marcados">Atendimentos Marcados</string>
    <string name="voltar">Voltar</string>
    <string name="confirmar">Confirmar</string>
    <string name="remarcar">Remarcar</string>
    <string name="agendar">Agendar</string>
    <string name="desmarcar">Desmarcar</string>
    <string name="cliente">Cliente</string>
    <string name="Confirmar">Confirmar</string>
</resources>