<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/atendimentos_marcados"
        android:textColor="#121111"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lista_atendimentos_cliente"
        android:layout_width="375dp"
        android:layout_height="390dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/agendar_atendimentos_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/agendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_atendimentos_cliente" />

    <Button
        android:id="@+id/remarcar_atendimentos_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/remarcar"
        app:layout_constraintStart_toEndOf="@+id/agendar_atendimentos_cliente"
        app:layout_constraintTop_toBottomOf="@+id/lista_atendimentos_cliente" />

    <Button
        android:id="@+id/desmarcar_atendimentos_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/desmarcar"
        app:layout_constraintStart_toEndOf="@+id/remarcar_atendimentos_cliente"
        app:layout_constraintTop_toBottomOf="@+id/lista_atendimentos_cliente" />

    <Button
        android:id="@+id/voltar_atendimentos_cliente"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agendar_atendimentos_cliente" />

    <Button
        android:id="@+id/confirmar_atendimentos_cliente"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/confirmar"
        app:layout_constraintStart_toEndOf="@+id/voltar_atendimentos_cliente"
        app:layout_constraintTop_toBottomOf="@+id/desmarcar_atendimentos_cliente" />
</androidx.constraintlayout.widget.ConstraintLayout>